<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conference Helper</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_email">邮箱地址 email</string>
    <string name="dummy_password">密码 password</string>
    <string name="Sign_in">Sign in</string>
    <string name="Sign_up">Sign up</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>
    <string name="Question">How are you?</string>
    <string name="Send">Send</string>
    <string name="Done">Done</string>
    <string name="Upload">Upload</string>
    <string name="Beautiful_Picture">Beautiful Picture</string>
    <string name="Uploading">Uploading</string>
    <string name="Loading_Complete">Loading Complete, button is disabled</string>
    <string name="Email_label">Email</string>
    <string name="Password_label">Password</string>
    <string name="Nickname_label">Nickname</string>
    <string name="Admin_checkbox">login as admin</string>
    <string name="Admin_signup">signup as admin</string>
    <string name="tab_label_current_meeting">当前会议</string>
    <string name="tab_label_past_meeting">过去会议</string>
    <string name="tab_label_my_collection">我收藏的</string>
    <string name="tab_label_my_authorship">我发表的</string>
    <string name="tab_label_meeting_info">基本信息</string>
    <string name="tab_label_meeting_keynotes">会议议程</string>
    <string name="tab_label_meeting_paper">会议论文</string>
    <string name="tab_label_detail_info">详细信息</string>
    <string name="tab_label_detail_paper">相关论文</string>
    <string name="tab_label_detail_comment">评论</string>
    <string name="tab_label_scholar_paper">TA的论文</string>
    <string name="tab_label_scholar_info">基本信息</string>
    <string name="detail_activity_header_paper">论文</string>
    <string name="detail_activity_header_schedule">议程</string>
    <string name="paper_info_author">作者:</string>
    <string name="paper_info_abstract">摘要:</string>
    <string name="paper_info_download">全文链接:</string>
    <string name="meeting_info_name">会议名称：</string>
    <string name="meeting_info_org">主办单位：</string>
    <string name="meeting_info_date">举办日期：</string>
    <string name="meeting_info_place">举办地点：</string>
    <string name="meeting_info_desc">会议概况：</string>
    <string name="schedule_info_lecturer">主讲人:</string>
    <string name="schedule_info_host">主持人:</string>
    <string name="schedule_info_org">单位:</string>
    <string name="schedule_info_time">时间:</string>
    <string name="schedule_info_place">地点:</string>
    <string name="scholar_info_institute">单位:</string>
    <string name="scholar_info_topic">研究方向:</string>
    <string name="scholar_info_email">邮箱:</string>
    <string name="scholar_info_website">网页:</string>
    <string name="scholar_info_quote">签名:</string>
    <string name="icon_meeting">icon of the meeting</string>
    <string name="server_url">http://</string>
    <string name="toggle_open">open</string>
    <string name="toggle_close">close</string>

    <string name="scholar_cannot_find_alert_title">找不到用户</string>
    <string name="scholar_cannot_find_alert_body">该用户尚未注册本app</string>

    <string name="paper_download_alert_title">下载</string>
    <string name="paper_download_alert_body">已开始下载论文</string>

    <array name="sample_list">
        <item>Action Button Progress sample</item>
        <item>Action Button Endless Progress sample</item>
        <item>Submit Button Progress sample</item>
        <item>Generate Button Progress sample</item>
        <item>Button State sample</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--
    <resources>
        <string name="app_name">My Application</string>
        <string name="title_activity_login">Sign in</string>
        <string name="prompt_email">Email</string>
        <string name="prompt_password">Password</string>
        <string name="action_sign_in">Sign in or register</string>
        <string name="action_sign_in_short">Sign in</string>
        <string name="welcome">"Welcome !"</string>
        <string name="invalid_username">Not a valid username</string>
        <string name="invalid_password">Password must be >5 characters</string>
        <string name="login_failed">"Login failed"</string>
        <string name="Loading_Complete">Loading complete!</string>>
    </resources>
    -->
</resources>
