<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scholar.info.ScholarInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/scholar_info_institution_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scholar_info_institute" />

    <TextView
        android:id="@+id/scholar_info_institution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_institution_title"
        android:text="@string/paper_info_author" />

    <TextView
        android:id="@+id/scholar_info_topic_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_institution"
        android:text="@string/scholar_info_topic" />

    <TextView
        android:id="@+id/scholar_info_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_topic_title"
        android:text="@string/paper_info_abstract" />

    <TextView
        android:id="@+id/scholar_info_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_topic"
        android:text="@string/scholar_info_email" />

    <TextView
        android:id="@+id/scholar_info_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_email_title"
        android:text="@string/paper_info_abstract" />

    <TextView
        android:id="@+id/scholar_info_website_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_email"
        android:text="@string/scholar_info_website" />

    <TextView
        android:id="@+id/scholar_info_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_website_title"
        android:text="@string/paper_info_abstract" />

    <TextView
        android:id="@+id/scholar_info_quote_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_website"
        android:text="@string/scholar_info_quote" />

    <TextView
        android:id="@+id/scholar_info_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scholar_info_quote_title"
        android:text="@string/paper_info_abstract" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scholar_start_chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:src="@drawable/ic_start_chat" />

</RelativeLayout>