<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    tools:context=".detail.paper_info.PaperInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/paper_layout_name"
        android:background="#FFFFFF"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/paper_info_authors_title"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/paper_info_author" />

        <TextView
            android:id="@+id/paper_info_authors"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paper_info_author" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/paper_layout_abstract"
        android:background="#FFFFFF"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_below="@id/paper_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/paper_info_abstract_title"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/paper_info_abstract" />

        <TextView
            android:id="@+id/paper_info_abstract"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paper_info_author" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/paper_layout_download"
        android:background="#FFFFFF"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_below="@id/paper_layout_abstract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/paper_info_downlaod_title"
            android:layout_marginStart="15dp"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/paper_info_download" />

        <TextView
            android:id="@+id/paper_info_download"
            android:layout_marginStart="5dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paper_info_author" />

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/paper_collect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FFFFFF"
        android:clickable="true"
        android:src="@drawable/ic_collect" />

</RelativeLayout>